--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.14",
     "clsx": "^2.0.0",
+    "critters": "^0.0.23",
     "framer-motion": "^10.16.16",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
