feat: 配置Netlify自動部署 - 添加靜態導出配置 - 更新netlify.toml設置 - 創建詳細部署指南

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,28 @@
 [build]
   command = "npm run build"
-  publish = ".next"
+  publish = "out"
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
+
+# Next.js 重定向規則
+[[redirects]]
+  from = "/_next/static/*"
+  to = "/_next/static/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/api/*"
+  to = "/api/:splat"
+  status = 200
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+# 安全標頭
 [[headers]]
   for = "/*"
   [headers.values]
@@ -18,11 +31,13 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
 
+# 靜態資源緩存
 [[headers]]
   for = "/_next/static/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
+# API路由不緩存
 [[headers]]
   for = "/api/*"
   [headers.values]
