--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build"
-  publish = "out"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -17,6 +17,7 @@
   to = "/api/:splat"
   status = 200
 
+# 處理客戶端路由
 [[redirects]]
   from = "/*"
   to = "/index.html"
