feat: 添加PDF功能完整性測試和報告
- 新增PDF功能完整性測試頁面 (/pdf-functionality-test)
- 更新QuestPDF Hook端口配置 (5101)
- 添加PDF功能檢查報告 (PDF_FUNCTIONALITY_REPORT.md)
- 更新.gitignore忽略.NET構建文件
- 修復QuestPDF API端口配置問題

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,19 @@ key.env
 
 # TypeScript
 *.tsbuildinfo
-next-env.d.ts 
+next-env.d.ts
+
+# .NET
+QuestPdfApi/bin/
+QuestPdfApi/obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!next.config.js
+!postcss.config.js
+!tailwind.config.js 
