--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,30 @@
   ],
   "functions": {
     "app/api/generate-pdf/route.ts": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 3008
     }
   },
   "env": {
     "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true"
-  }
+  },
+  "headers": [
+    {
+      "source": "/api/generate-pdf",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "POST, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type"
+        }
+      ]
+    }
+  ]
 } 
